--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-syntax-highlighter": "^15.5.5"
+    "@types/react-syntax-highlighter": "^15.5.5",
+    "eslint": "^7.32.0"
   }
 }
