--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,26 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Nico D'Cotta ",
+  "name": "Nico D'Cotta's web portfolio",
   "icons": [
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
+//    {
+//      "src": "logo192.png",
+//      "type": "image/png",
+//      "sizes": "192x192"
+//    },
     {
-      "src": "logo192.png",
+      "src": "water_lux_FILL0_wght300_GRAD0_opsz48.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "48x48"
     },
     {
-      "src": "logo512.png",
+      "src": "icons8-wave-100.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "100x100"
     }
   ],
   "start_url": ".",
