--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,11 +6,23 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
-
     - name: Build and Deploy to GitHub Pages
       uses: omkartapale/react-deployment-gh-pages@v1.0.0
+
+  publish-docker:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build the hello-docker Docker image
+        run: |
+          docker build . --tag ghcr.io/cottand/web-portfolio
+          docker push ghcr.io/cottand/web-portfolio
