--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-portfolio",
   "homepage": "https://nico.dcotta.eu",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "@types/react-syntax-highlighter": "^15.5.5",
-    "eslint": "^7.32.0"
+    "eslint": "^7.32.0",
+    "remark-gfm": "3.0.1"
   }
 }
