--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build the hello-docker Docker image
+      - name: Build Docker image
         run: |
           git_sha=$(git rev-parse --short "$GITHUB_SHA")
           docker build . --tag ghcr.io/cottand/web-portfolio:latest
@@ -37,10 +37,11 @@ jobs:
       - name: Install Nix
         uses: cachix/install-nix-action@v22
         with:
-          nix_path: nixpkgs=https://github.com/Cottand/nixpkgs/archive/refs/tags/23.05.2.tar.gz
+          nix_path: nixpkgs=channel:nixos-23.05
+#          nix_path: nixpkgs=https://github.com/Cottand/nixpkgs/archive/refs/tags/23.05.2.tar.gz
       - name: Install Nomad
         run: |
-          nix-env -i nomad_1_6 -f '<nixpkgs>'
+          nix-env -i nomad -f '<nixpkgs>'
       - name: Set up WireGuard
         uses: egor-tensin/setup-wireguard@v1
         with:
