--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,11 +38,11 @@ jobs:
       - name: Install Nix
         uses: cachix/install-nix-action@v22
         with:
-          nix_path: nixpkgs=channel:nixos-23.05
+          nix_path: nixpkgs=channel:nixos-unstable
 #          nix_path: nixpkgs=https://github.com/Cottand/nixpkgs/archive/refs/tags/23.05.2.tar.gz
       - name: Install Nomad
         run: |
-          nix-env -i nomad -f '<nixpkgs>'
+          nix-env -i nomad_1_6 -f '<nixpkgs>'
       - name: Set up WireGuard
         uses: egor-tensin/setup-wireguard@v1
         with:
