--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,14 +35,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Install Nix
-        uses: cachix/install-nix-action@v22
-        with:
-#          nix_path: nixpkgs=channel:nixos-unstable
-          nix_path: nixpkgs=https://github.com/Cottand/nixpkgs/archive/refs/tags/23.05.2.tar.gz
       - name: Install Nomad
         run: |
-          nix-env -i nomad -f '<nixpkgs>'
+          wget -O- https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
+          echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
+          sudo apt update && sudo apt install nomad
+          
+          nomad -v
+      - run: nomad -v
       - name: Set up WireGuard
         uses: egor-tensin/setup-wireguard@v1
         with:
@@ -51,7 +51,6 @@ jobs:
           ips: '${{ secrets.WG_IPS }}'
           allowed_ips: '${{ secrets.WG_ALLOWED_IPS }}'
           private_key: '${{ secrets.WG_PRIVATE_KEY }}'
-      - run: nomad -v
       - name: Nomad plan
         run: |
           set -e
