--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,14 +35,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Install Nix
+        uses: cachix/install-nix-action@v22
+        with:
+          nix_path: nixpkgs=channel:nixos-23.05
+#          nix_path: nixpkgs=https://github.com/Cottand/nixpkgs/archive/refs/tags/23.05.2.tar.gz
       - name: Install Nomad
         run: |
-          wget -O- https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
-          echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
-          sudo apt update && sudo apt install nomad
-          
-          nomad -v
-      - run: nomad -v
+          nix-env -i nomad -f '<nixpkgs>'
       - name: Set up WireGuard
         uses: egor-tensin/setup-wireguard@v1
         with:
@@ -54,8 +54,7 @@ jobs:
       - name: Nomad plan
         run: |
           set -e
-          
-          
+          NOMAD_ADDR=http://${{ secrets.NOMAD_ADDR }}:4646
           git_sha=$(git rev-parse --short "$GITHUB_SHA")
           job=$(curl "https://raw.githubusercontent.com/Cottand/selfhosted/master/jobs/web-portfolio.hcl" )
           echo $job | nomad plan -var docker_tag=$git_sha -
