--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Nomad plan
         run: |
           set -e
-          NOMAD_ADDR=http://${{ secrets.NOMAD_ADDR }}:4646
+          export NOMAD_ADDR=http://${{ secrets.NOMAD_ADDR }}:4646
           git_sha=$(git rev-parse --short "$GITHUB_SHA")
           
           curl "https://raw.githubusercontent.com/Cottand/selfhosted/master/jobs/web-portfolio.hcl" >> job.hcl
