--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,9 +8,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Build and Deploy to GitHub  Pages
-      uses: omkartapale/react-deployment-gh-pages@v1.0.0
+      - uses: actions/checkout@v3
+      - name: Build and Deploy to GitHub  Pages
+        uses: omkartapale/react-deployment-gh-pages@v1.0.0
 
   publish-docker:
     runs-on: ubuntu-latest
@@ -50,7 +50,7 @@ jobs:
           ips: '${{ secrets.WG_IPS }}'
           allowed_ips: '${{ secrets.WG_ALLOWED_IPS }}'
           private_key: '${{ secrets.WG_PRIVATE_KEY }}'
-      - name: Nomad plan
+      - name: "Nomad deploy 🚀"
         run: |
           set -e
           export NOMAD_ADDR=http://${{ secrets.NOMAD_ADDR }}:4646
