--- a/nginx.conf
+++ b/nginx.conf
@@ -10,6 +10,8 @@ http {
               include /etc/nginx/mime.types;
 
       location / {
+        # see https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/receiver/nginxreceiver
+        stub_status;
         index  index.html index.htm;
         try_files $uri /index.html;
       }
