fix setting whole service as stub status

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,9 +9,11 @@ http {
 
               include /etc/nginx/mime.types;
 
+        location /nginx_status {
+            stub_status on;
+        }
       location / {
         # see https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/receiver/nginxreceiver
-        stub_status;
         index  index.html index.htm;
         try_files $uri /index.html;
       }
