--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -1,6 +1,5 @@
 FROM node:18.12.1-buster-slim AS builder
 
-
 COPY package.json package-lock.json ./
 COPY tsconfig.json tsconfig.json ./
 COPY public/ public/
@@ -9,7 +8,8 @@ COPY src/ src/
 RUN npm ci
 RUN npm run build
 
-FROM caddy:latest
+FROM nginx:alpine3.17-slim
 
-COPY --from=builder build /srv
-COPY  Caddyfile /etc/caddy/Caddyfile
+COPY --from=builder build /usr/share/nginx/html
+COPY  nginx.conf /etc/nginx/nginx.conf
+
