--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,7 @@ name: Build and Deploy
 
 on:
   push:
+    workflow_dispatch:
     branches: [ "master" ]
 
 jobs:
@@ -11,6 +12,30 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build and Deploy to GitHub  Pages
         uses: omkartapale/react-deployment-gh-pages@v1.0.0
+
+  publish-nix-container:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2.2.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - uses: cachix/install-nix-action@v22
+        with:
+          github_access_token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: docker/setup-qemu-action@v1
+      - run: nix build .#containerImage
+      - run: |
+          git_sha=$(git rev-parse --short "$GITHUB_SHA")
+
+          docker load < result
+          docker tag nico.dcotta.eu:nix ghcr.io/cottand/web-portfolio:latest
+          docker tag ghcr.io/cottand/web-portfolio:latest ghcr.io/cottand/web-portfolio:$git_sha
+          docker push ghcr.io/cottand/web-portfolio:latest
+          docker push ghcr.io/cottand/web-portfolio:$git_sha
+
 
   publish-docker:
     runs-on: ubuntu-latest
@@ -30,33 +55,33 @@ jobs:
           docker push ghcr.io/cottand/web-portfolio:latest
           docker push ghcr.io/cottand/web-portfolio:$git_sha
 
-  deploy-nomad:
-    needs: publish-docker
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Install Nomad
-        run: |
-          wget -O- https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
-          echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
-          sudo apt update && sudo apt install nomad
+  # deploy-nomad:
+  #   needs: publish-docker
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Install Nomad
+  #       run: |
+  #         wget -O- https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
+  #         echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
+  #         sudo apt update && sudo apt install nomad
           
-          nomad -v
-      - name: Set up WireGuard
-        uses: egor-tensin/setup-wireguard@v1
-        with:
-          endpoint: '${{ secrets.WG_ENDPOINT }}'
-          endpoint_public_key: '${{ secrets.WG_ENDPOINT_PUBLIC_KEY }}'
-          ips: '${{ secrets.WG_IPS }}'
-          allowed_ips: '${{ secrets.WG_ALLOWED_IPS }}'
-          private_key: '${{ secrets.WG_PRIVATE_KEY }}'
-      - name: "Nomad deploy 🚀"
-        run: |
-          set -e
-          export NOMAD_ADDR=http://${{ secrets.NOMAD_ADDR }}:4646
-          git_sha=$(git rev-parse --short "$GITHUB_SHA")
+  #         nomad -v
+  #     - name: Set up WireGuard
+  #       uses: egor-tensin/setup-wireguard@v1
+  #       with:
+  #         endpoint: '${{ secrets.WG_ENDPOINT }}'
+  #         endpoint_public_key: '${{ secrets.WG_ENDPOINT_PUBLIC_KEY }}'
+  #         ips: '${{ secrets.WG_IPS }}'
+  #         allowed_ips: '${{ secrets.WG_ALLOWED_IPS }}'
+  #         private_key: '${{ secrets.WG_PRIVATE_KEY }}'
+  #     - name: "Nomad deploy 🚀"
+  #       run: |
+  #         set -e
+  #         export NOMAD_ADDR=http://${{ secrets.NOMAD_ADDR }}:4646
+  #         git_sha=$(git rev-parse --short "$GITHUB_SHA")
           
-          curl "https://raw.githubusercontent.com/Cottand/selfhosted/master/jobs/web-portfolio.hcl" >> job.hcl
+  #         curl "https://raw.githubusercontent.com/Cottand/selfhosted/master/jobs/web-portfolio.hcl" >> job.hcl
           
-          # nomad plan -var docker_tag=$git_sha job.hcl
-          nomad run -detach -var docker_tag=$git_sha job.hcl
+  #         # nomad plan -var docker_tag=$git_sha job.hcl
+  #         nomad run -detach -var docker_tag=$git_sha job.hcl
