blog post for multi-arch containers

--- a/Caddyfile
+++ b/Caddyfile
@@ -6,7 +6,7 @@
 	bind 0.0.0.0
 
     handle /* {
-        root * /srv
+        root * NIX_STORE_PATH
         file_server
         try_files {path} /index.html
         encode gzip zstd
