--- a/Caddyfile
+++ b/Caddyfile
@@ -3,8 +3,8 @@
     auto_https off
     admin off
 }
-:80 {
-	bind 0.0.0.0
+:{$PORT:80} {
+	bind {$HOST:0.0.0.0}
 
     handle /* {
         root * NIX_STORE_PATH
