--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-portfolio",
-  "homepage": "https://nico.dcotta.eu",
+  "homepage": "https://nico.dcotta.com",
   "version": "0.1.1",
   "private": true,
   "dependencies": {
