be more go friendly and move stuff into public/

--- a/public/assets/manifest.json
+++ b/public/assets/manifest.json
@@ -1,24 +1,19 @@
 {
   "short_name": "Nico D'Cotta ",
-  "name": "Nico D'Cotta's web portfolio",
+  "name": "Nico's web portfolio",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "assets/favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
-//    {
-//      "src": "logo192.png",
-//      "type": "image/png",
-//      "sizes": "192x192"
-//    },
     {
-      "src": "water_lux_FILL0_wght300_GRAD0_opsz48.png",
+      "src": "assets/water_lux_FILL0_wght300_GRAD0_opsz48.png",
       "type": "image/png",
       "sizes": "48x48"
     },
     {
-      "src": "icons8-wave-100.png",
+      "src": "assets/icons8-wave-100.png",
       "type": "image/png",
       "sizes": "100x100"
     }
