--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
 
       - uses: docker/setup-qemu-action@v1
 
+      # build in parallel
       - run: nix build .#packages.${{ matrix.system }}.containerImage
 
       - name: Tag and push image
@@ -73,20 +74,41 @@ jobs:
     runs-on: ubuntu-latest
     needs: [publish-nix-container]
     steps:
-      - name: Download digests
-        uses: actions/download-artifact@v3
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2.2.0
         with:
-          name: digests
-          path: /tmp/digests
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to the Container registry
-        uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: digest for x86
+        run:  |
+          system=x86_64-linux
+          git_sha=${GITHUB_SHA::7}
+          label="${git_sha}-${system}"
+
+          # export digest x86
+          docker pull ${{ env.REGISTRY_IMAGE }}:$label
+          full=$(docker image inspect ${{ env.REGISTRY_IMAGE }}:$label --format "{{index .RepoDigests 0}}")
+          digest=${full#${{ env.REGISTRY_IMAGE }}@}
+          mkdir -p /tmp/digests
+          touch "/tmp/digests/${digest#sha256:}"
+
+      - name: digest for aarch64
+        run:  |
+          system=aarch64-linux
+          git_sha=${GITHUB_SHA::7}
+          label="${git_sha}-${system}"
+
+          # export digest x86
+          docker pull ${{ env.REGISTRY_IMAGE }}:$label
+          full=$(docker image inspect ${{ env.REGISTRY_IMAGE }}:$label --format "{{index .RepoDigests 0}}")
+          digest=${full#${{ env.REGISTRY_IMAGE }}@}
+          mkdir -p /tmp/digests
+          touch "/tmp/digests/${digest#sha256:}"
 
       - name: Docker meta
         id: meta
