--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "jsx": "preserve",
     "typeRoots": [
       "src/types",
+      "src/types/imported",
       "node_modules/@types"
     ]
   },
