--- a/package.json
+++ b/package.json
@@ -15,26 +15,27 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.3",
+    "@types/node": "^22.12.0",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@vitejs/plugin-react-swc": "^4.0.0",
     "mermaid": "^10.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.4",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-transition-group": "^4.4.5",
     "rehype-raw": "^6.1.1",
     "typescript": "^5.9.2",
+    "vite": "^7.1.1",
+    "vite-tsconfig-paths": "^5.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview"
   },
   "eslintConfig": {
     "extends": []
@@ -52,8 +53,9 @@
     ]
   },
   "devDependencies": {
-    "@types/react-syntax-highlighter": "^15.5.5",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^7.32.0",
-    "remark-gfm": "3.0.1"
+    "remark-gfm": "3.0.1",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
