--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ESNext",
     "lib": [
       "dom",
       "dom.iterable",
@@ -18,15 +18,19 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve",
     "typeRoots": [
       "src/types",
-      "src/types/imported/*",
+      "src/types/imported",
       "node_modules/@types"
+    ],
+    "jsx": "react-jsx",
+    "types": [
+//      "vite/client",
+//      "vite-plugin-svgr/client"
     ]
   },
   "include": [
-//    "src",
-//    "src/components",
+    "src/*"
+    //    "src/components",
   ]
 }
