--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@types/node": "^22.12.0",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
-    "@vitejs/plugin-react-swc": "^4.0.0",
     "mermaid": "^10.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,8 +27,6 @@
     "react-transition-group": "^4.4.5",
     "rehype-raw": "^6.1.1",
     "typescript": "^5.9.2",
-    "vite": "^7.1.1",
-    "vite-tsconfig-paths": "^5.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -54,8 +51,12 @@
   },
   "devDependencies": {
     "@types/react-syntax-highlighter": "^15.5.13",
-    "eslint": "^7.32.0",
+    "@vitejs/plugin-react": "^4.7.0",
+    "eslint": "^9.32.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "remark-gfm": "3.0.1",
-    "vite-plugin-svgr": "^4.3.0"
+    "vite": "^7.1.1",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
