--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "ES2022",
     "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
+      "ES2022",
+      "DOM",
+      "DOM.Iterable"
     ],
     "allowJs": true,
     "skipLibCheck": true,
@@ -18,19 +18,16 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    "noUncheckedSideEffectImports": true,
     "typeRoots": [
-      "src/types",
       "src/types/imported",
       "node_modules/@types"
     ],
     "jsx": "react-jsx",
-    "types": [
-//      "vite/client",
-//      "vite-plugin-svgr/client"
-    ]
   },
   "include": [
-    "src/*"
+    "src",
+    "vite.config.ts",
     //    "src/components",
   ]
 }
